<resources>
    <string name="app_name">ElectricityChart</string>


    <!--Img contentDescription-->
    <string name="img_logo">LOGO</string>
    <string name="img_clear">清除图标</string>
    <string name="img_showpsd">显示隐藏密码</string>

    <!--res Button-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="inlib">入库</string>
    <string name="outlib">出库</string>
    <string name="lib">库存</string>
    <string name="logon_out">退出登录</string>
    <string name="language_set">语言</string>
    <string name="btn_confirmin">确认入库</string>
    <string name="btn_outconfirmin">确认出库</string>

    <!--res EditText-->
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_inprice">请输入进货价</string>
    <string name="hint_outprice">请输入出货价</string>
    <string name="hint_email">请输入邮箱</string>

    <!--res CB-->
    <string name="cb_remember">记住密码</string>

    <!--res TextView-->
    <string name="tv_chart">负载率</string>

    <string name="viewGithub">View on GitHub</string>
    <string name="reportProblem">Problem Report</string>
    <string name="viewWebsite">Developer Website</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>

    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleYValues">Toggle Y-Values</string>
    <string name="actionToggleXValues">Toggle X-Values</string>

    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>

    <string name="actionToggleLineValues">Toggle Line Values</string>
    <string name="actionToggleBarValues">Toggle Bar Values</string>
    <string name="actionToggleBarBorders">Toggle Bar Borders</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCandleShadow">Toggle Shadow Color</string>

    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>

    <string name="actionAddEntry">Add Entry</string>
    <string name="actionFeedMultiple">Add Multiple</string>
    <string name="actionRemoveEntry">Remove Entry</string>
    <string name="actionAddDataSet">Add Data Set</string>
    <string name="actionRemoveDataSet">Remove Data Set</string>
    <string name="actionClearChart">Clear chart</string>

    <string name="actionTogglePercent">Toggle Percent</string>
    <string name="actionToggleMinAngles">Toggle Minimum Angles</string>
    <string name="actionToggleHole">Toggle Hole</string>
    <string name="actionToggleCurvedSlices">Toggle Curved Slices</string>
    <string name="actionDrawCenterText">Draw Center Text</string>
    <string name="actionToggleHighlightCircle">Toggle Highlight Circle</string>
    <string name="actionToggleRotation">Toggle Rotation</string>
    <string name="actionToggleSpin">Spin Animation</string>

    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>

    <!--res Kotlin-->
    <string name="pack_carry">每提%1$s饼</string>
    <string name="pack_box">每箱%1$s提</string>
    <string name="totalnum">%1$s饼</string>

    <string name="icon_name">面试题</string>
    <string name="action_about">关于</string>
    <string name="action_setting">设置</string>
    <string name="exit_app_hint">再按一退出程序</string>
    <string name="submit_question">提交你遇到的BUG或建议</string>
    <string name="submit_issues">程序有BUG可以从这提交</string>
    <string name="text_about">视频内容均来自互联网，如有侵权请联系我删除。</string>
    <string name="text_explain">声明</string>
    <string name="text_version_name">版本说明</string>
    <string name="text_github_url">项目已开源到Github</string>
    <string name="text_alipay_donate">支付宝打赏</string>
    <string name="text_donate_explain">如果觉得我收集的面试题对您有用，请随意打赏。</string>

    <string name="java_questions">Java面试题</string>
    <string name="android_base_questions">Android基础面试题</string>
    <string name="android_senior_questions">Android高级面试题</string>
    <string name="java_web_questions">JavaWeb面试题</string>

    <string name="setting_show">显示设置</string>
    <string name="is_show_javaweb">是否显示JavaWeb面试题</string>
    <string name="is_show_androidbase">是否显示Android基础面试题</string>
    <string name="is_show_android_senior">是否显示Android高级面试题</string>
    <string name="is_show_java">是否显示Java面试题</string>

    <string name="setting_other">其它设置</string>
    <string name="nothing">暂无</string>
    <!--toolBar-->
    <string name="toolbar_login">云茶追溯D端登录</string>
    <string name="toolbar_home">首页</string>

    <!--提示语句-->
    <string name="netnowork_error">请求失败</string>
    <string name="double_click">请勿重复点击</string>
    <string name="qr_prompt">请将二维码置于取景框内</string>
    <string name="choose_language">请选择语言类型</string>
    <string name="is_logout">是否退出登录</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="isset_language">当前语言已经设置为该语言</string>
    <string name="canal_qr">取消扫描</string>
    <string name="lib_Remaining">库存剩余</string>
    <string name="inprice_prompt">请输入进货价</string>
    <string name="outprice_prompt">请输入零售价</string>
    <string name="dont_hava_list">您还未添加任何列表</string>
    <string name="permission_dialog_content">请注意:为了更好的使用软件，请确认权限的使用</string>
    <string name="permission_dialog_title">提示</string>
    <string name="permission_dialog_agree">了解</string>
    <string name="please_real_qr">请扫描正确的二维码</string>
    <string name="psd_check">请输入数字或字母</string>
    <string name="dialog_close">关闭</string>
    <string name="input_user_prompt">请输入用户名</string>
    <string name="input_psd_prompt">请输入密码</string>
    <string name="please_wait">请稍后..</string>
    <string name="setting">设置</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">如果不授予所有权限，程序将退出</string>
</resources>
