<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">



        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/color_item_press" />

        <LinearLayout
            android:id="@+id/githubUrl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/text_github_url"
                android:textColor="@color/colorAccent" />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/color_item_press" />



        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/color_item_press" />

        <EditText
            android:id="@+id/et_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_normal_shape"
            android:gravity="top"
            android:hint="@string/submit_issues"
            android:maxLines="7"
            android:minLines="7"
            android:paddingTop="5dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/main_item_selector"
            android:text="@string/submit_question"
            android:textColor="@color/color_item_normal" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>