<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x200"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_logo" />

    <RelativeLayout
        android:id="@+id/rl_phone"
        android:layout_below="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_marginTop="@dimen/x50">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:src="@mipmap/ic_user"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_user"

            android:hint="@string/hint_username"
            android:text="123"
            android:inputType="textVisiblePassword"
            android:maxLength="11"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_clean_phone"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/et_username"
            android:layout_alignEnd="@+id/et_username"
            android:contentDescription="@string/img_clear"
            android:scaleType="centerInside"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_psd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x100"
        android:layout_below="@+id/rl_phone"
        android:layout_marginTop="@dimen/x50">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:src="@mipmap/ic_password"/>

        <EditText
            android:id="@+id/et_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/iv_password"
            android:hint="@string/hint_password"
            android:text="123"
            android:inputType="textPassword"
            android:maxLength="30"
            android:imeOptions="actionGo"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/clean_password"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/et_psd"
            android:layout_alignEnd="@+id/et_psd"
            android:contentDescription="@string/img_clear"
            android:scaleType="centerInside"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_show_pwd"
            android:layout_width="@dimen/x50"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/et_psd"
            android:layout_alignEnd="@+id/et_psd"
            android:layout_marginRight="@dimen/x60"
            android:layout_marginEnd="@dimen/x60"
            android:contentDescription="@string/img_showpsd"
            android:scaleType="centerInside"
            android:src="@drawable/pass_gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_forget_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_psd"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:textColor="@color/gray"
        android:text="忘记密码？" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_psd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:textColor="@color/gray"
        android:text="没有账号？立即注册" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:indeterminate="true" />

</RelativeLayout>